--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,33 @@
   </div>
 </section>
 
+  <section>
+  <h2>Contact Us</h2>
+  <p style="text-align: center;">Don't hesitate to get in touch if XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
+
+  <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 2rem; margin-top: 1.5rem;">
+
+    <div style="text-align: center;">
+      <p style="margin: 0;">
+        <img src="images/email.png" alt="Email icon" class="contact-icon" style="vertical-align: middle; width: 32px; height: 32px; margin-right: 0.5rem;">
+        <b>Email:</b>
+        <a href="mailto:bphillips.consultancy@gmail.com">bphillips.consultancy@gmail.com</a>
+      </p>
+    </div>
+
+    <div style="text-align: center;">
+      <p style="margin: 0;">
+        <img src="images/linkedin.png" alt="LinkedIn icon" class="contact-icon" style="vertical-align: middle; width: 32px; height: 32px; margin-right: 0.5rem;">
+        <b>LinkedIn:</b>
+        Connect with
+        <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Ben</a> /
+        <a href="https://www.linkedin.com/in/emily-duncan-7a324b64">Emily</a>
+      </p>
+    </div>
+
+  </div>
+</section>
+
   <footer>
     &copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.
   </footer>
