--- a/publications.html
+++ b/publications.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
 
-  <section style="padding: 2rem 1rem; max-width: 800px; margin: 0 auto;">
+  <section>
   <h2>Publications</h2>
   <p>
     Over the past 20+ years in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, spanning topics including pollinator conservation, marine plastic pollution, and effective land management.
