--- a/testimonials.html
+++ b/testimonials.html
@@ -44,6 +44,32 @@
 
 </section>
 
+  <section style="position: relative; width: 95%; height: 500px; margin: 2rem auto; border-radius: 8px; overflow: hidden;">
+  
+  <img src="images/evidence-synthesis.jpg" alt="Image"
+       style="width: 100%; height: 100%; object-fit: contain; display: block;">
+
+  <h2 style="position: absolute; top: 5%; left: 5%; color: white; font-size: 2rem; font-weight: 600; margin: 0;">
+    Testimonials
+  </h2>
+
+  <div style="position: absolute; top: 25%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem;">
+    <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</p>
+    <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">Sam Manning, The Woodland Trust</p>
+  </div>
+
+  <div style="position: absolute; top: 55%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem; text-align: right;">
+    <p>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
+    <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">PERSON 2, ORGANISATION 2</p>
+  </div>
+
+  <div style="position: absolute; bottom: 10%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem;">
+    <p>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
+    <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">PERSON 3, ORGANISATION 3</p>
+  </div>
+
+</section>
+
   <footer>
   <p class="footer-contact">
     <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
