--- a/publications.html
+++ b/publications.html
@@ -24,7 +24,7 @@
   <section>
   <h2>Publications</h2>
   <p>
-    Over the past 20+ years in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, spanning topics including pollinator conservation, marine plastic pollution, and effective land management.
+    During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, spanning topics including pollinator conservation, marine plastic pollution, and effective land management.
   </p>
 
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
