--- a/testimonials.html
+++ b/testimonials.html
@@ -44,26 +44,57 @@
 
 </section>
 
-  <section style="position: relative; width: 95%; height: 500px; margin: 2rem auto; border-radius: 8px; overflow: hidden;">
-  
-  <img src="images/evidence-synthesis.jpg" alt="Image"
-       style="width: 100%; height: 100%; object-fit: contain; display: block;">
+  <section style="position: relative; width: 100%; height: 500px; margin: 0 auto; overflow: hidden;">
 
-  <h2 style="position: absolute; top: 5%; left: 5%; color: white; font-size: 2rem; font-weight: 600; margin: 0;">
+  <img src="images/evidence-synthesis.jpg" alt="Image"
+       style="width: 100%; height: 100%; object-fit: cover; display: block;">
+
+  <h2 style="
+    position: absolute;
+    top: 2rem;
+    left: 2rem;
+    color: white;
+    font-size: 2rem;
+    font-weight: 600;
+    margin: 0;">
     Testimonials
   </h2>
 
-  <div style="position: absolute; top: 25%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem;">
+  <div style="
+    position: absolute;
+    top: 20%;
+    left: 15%;
+    right: 15%;
+    color: white;
+    font-style: italic;
+    font-size: 1rem;
+    text-align: center;">
     <p>"TESTIMONIAL 1. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat. In non scelerisque massa."</p>
     <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">Sam Manning, The Woodland Trust</p>
   </div>
 
-  <div style="position: absolute; top: 55%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem; text-align: right;">
+  <div style="
+    position: absolute;
+    top: 45%;
+    left: 15%;
+    right: 15%;
+    color: white;
+    font-style: italic;
+    font-size: 1rem;
+    text-align: center;">
     <p>"TESTIMONIAL 2. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
     <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">PERSON 2, ORGANISATION 2</p>
   </div>
 
-  <div style="position: absolute; bottom: 10%; left: 20%; right: 20%; color: white; font-style: italic; font-size: 1rem;">
+  <div style="
+    position: absolute;
+    top: 70%;
+    left: 15%;
+    right: 15%;
+    color: white;
+    font-style: italic;
+    font-size: 1rem;
+    text-align: center;">
     <p>"TESTIMONIAL 3. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec orci enim. Donec commodo ultrices turpis quis volutpat."</p>
     <p style="margin-top: 0.5rem; font-style: normal; font-weight: normal;">PERSON 3, ORGANISATION 3</p>
   </div>
