--- a/services.html
+++ b/services.html
@@ -100,7 +100,7 @@
 </div>
   </section>
 
-  <section style="padding: 2rem 1rem; max-width: 800px; margin: 3rem auto; text-align: center;">
+  <section style="max-width: 800px; margin: 3rem auto; text-align: center;">
   <p>
     If you have a project in mind that isn’t listed above, we’d love to <a href="contact.html">hear from you</a>.
   </p>
